Added some deblur experiments to lec note

--- a/ieee_spm/adjoints_in_gradients.bib
+++ b/ieee_spm/adjoints_in_gradients.bib
@@ -27,12 +27,29 @@
    publisher="Johns Hopkins University Press",
 }
 
+@book{daubechies_1992,
+  title={Ten lectures on wavelets},
+  author={Daubechies, Ingrid and others},
+  volume={61},
+  year={1992},
+  publisher={SIAM}
+}
+
+
 
 @article{beck_2009,
    title="A Fast Iterative Shrinkage-Thresholding Algorithm for Linear Inverse Problems",
    author="Amir Beck and Marc Teboulle",
    year=2009,
    journal="SIAM Journal on Imaging Sciences",
+}
+
+@article{beck_2009b,
+  title={Gradient-based algorithms with applications to signal recovery},
+  author={Amir Beck and Marc Teboulle},
+  journal={Convex Optimization in Signal Processing and Communications},
+  pages={42--88},
+  year={2009}
 }
 
 @article{becker_2011,
